# fenetre.cam

./: .gitignore  .gitmodules  AGENTS.md  ANDROID_APP_CONFIG.proto  ANDROID_APP_TODO.md  Dockerfile  GEMINI.md  README.md  TODO.md  admin_server.py  archive.py  camaredn.py  camaredn.service  camera.html  check_ff.sh  config.bart.yaml  config.dirty.yaml  config.example.textpb  config.example.yaml  config.goprousb.yaml  config.integration.intelnuc.yaml  config.integration.yaml  config.isitfoggy.yaml  config.py  config.yaml.pi  config_server.py  create_gopro_state_map.py  daylight.py  docker-compose.yaml  fenetre.py  fenetre.service  fullscreen.html  gopro.py  gopro_state_map.py  gopro_utility.py  imx477_long_exposure.json  index.html  list.html  map.html  nginx.conf  (+9 more)
benchmark/: aredn_bandwidth_test.sh
itests/: config.integration.local_command.yaml  generate_landscape.py  integration_test_spec.md  test_local_command_landscape_integration.py  test_server_integration.py  timelapse_integration_test.py
lib/: daylight.css
src/fenetre/: admin_server.py  archive.py  camera_utils.py  config.py  (+15 more)
static/: app.js  index.html  style.css  visual_config.html  visual_config.js
tests/: archive_test.py  daylight_test.py  gopro_presets_get.json  gopro_test.py  goprohero11_photo_presets.json  goprostate.json  postprocess_test.py  test_admin_server.py  test_archive.py  test_camera_utils.py  test_config_server.py  test_daylight.py  test_fenetre.py  test_fenetre_config.py  test_gopro.py  test_gopro_hero6.py  test_logging_utils.py  test_postprocess.py  test_timelapse.py  timelapse_test.py
(+20 files in other folders)
