[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fenetre"
version = "0.1.0"
dependencies = [
    "pytz",
    "pyyaml",
    "absl-py",
    "logzero",
    "numpy",
    "astral",
    "Flask",
    "requests",
    "bleak",
    "mozjpeg-lossless-optimization",
    "waitress",
    "prometheus-client",
    "pyexiv2",
    "scikit-image",
]

[project.scripts]
fenetre = "fenetre.fenetre:run"
daylight-tool = "fenetre.daylight_tool:run"
timelapse-tool = "fenetre.timelapse_tool:run"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["fenetre"]

