[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fenetre"
version = "0.9.0"
dependencies = [
    "pytz",
    "pyyaml",
    "absl-py",
    "numpy",
    "astral",
    "Flask",
    "requests",
    "mozjpeg-lossless-optimization",
    "paho-mqtt",
    "waitress",
    "prometheus-client",
    "pyexiv2",
    "scikit-image",
    "Pillow",
    "cairosvg",
    "piexif",
]

[project.optional-dependencies]
gopro = [
    "bleak",
    "beautifulsoup4",
]

[project.scripts]
fenetre = "fenetre.fenetre:run"
daylight-tool = "fenetre.daylight_tool:run"
timelapse-tool = "fenetre.timelapse_tool:run"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["fenetre"]

[tool.flake8]
max-line-length = 120
ignore = "E501" # Example of ignoring other codes

[tool.isort]
profile = "black"
line_length = 120
